--- a/cielyu/templates/cc.html
+++ b/cielyu/templates/cc.html
@@ -10,9 +10,10 @@
 <hr>
 <body>
 
-<form id="formtest" name="register" method="post" action="http://127.0.0.1:8000/hregister/" onReset='alert("Please input your message")' onSubmit='alert("Registering")'>
+<form id="formtest" name="register" method="post" action="http://192.168.137.1:8000/hregister/" onReset='alert("Please input your message")' onSubmit='alert("Registering")'>
 	<p align="center"><span>username:</span><input type="text" name="username" id="input1"></p>
 	<p align="center"><span>password:</span><input type="password" name="password" id="input2"></p>
+	<p align="center"><span>tel:</span><input type="text" name="tel" id="input3"></p>
 	<p align="center"><input type="submit" id="test_post" value="submit">
 	<input type="reset" name="Submit2" value="reset">
 	</p>
