--- a/cielyu/templates/ccc.html
+++ b/cielyu/templates/ccc.html
@@ -10,7 +10,7 @@
 <body>
 <hr>
 <h1 align="center">Register Success!</h1>
-<form action="http://127.0.0.1:8000/hlogin" method="get">
+<form action="http://192.168.137.1:8000/hlogin/" method="get">
 <p align="center"><input type="submit" id="test_post" value="click to log in"></p>
 </form>
 </body>
