--- a/cielyu/templates/department-3.html
+++ b/cielyu/templates/department-3.html
@@ -3,11 +3,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>欢迎使用挂号系统</title>
+<title>无标题文档</title>
 </head>
 
 <body>
-<ul type="square">
+<ul>
 {% for bb in bb_list %}
 	<li>{{bb}}</li>
 {% endfor %}
@@ -24,5 +24,7 @@
 <p align="center">
 <input type="submit" name="submit" value="返回首页"></p>
 </form>
+</body>
+</html>
 </body>
 </html>
