--- a/cielyu/templates/adddoctor-1.html
+++ b/cielyu/templates/adddoctor-1.html
@@ -14,7 +14,10 @@
 </p>
 <p align="center">doctor:<input type="text" name="doctor">
 </p>
-<p align="center"><input type="submit" value="提交"></p>
+<p align="center"><input type="submit" value="提交"><input type="reset" value="重置"></p>
+</form>
+<form action="http://192.168.137.1:8000/index/" method="get">
+<p align="center"><input type="submit" value="返回首页"></p>
 </form>
 </body>
 </html>
