--- a/cielyu/templates/department-1.html
+++ b/cielyu/templates/department-1.html
@@ -12,9 +12,8 @@
 	<li>{{bb}}</li>
 {% endfor %}
 </ul>
-<form action="http://192.168.137.1:8000/hdoctor/" method="post">
-<p align="center"><input type="text" name="department" >
-<input type="submit" name="submit" value="提交"></p>
+<form action="http://192.168.137.1:8000/hdoctor/" method="get">
+<p align="center"><input type="submit" name="submit" value="查看医生"></p>
 </form>
 <form action="http://192.168.137.1:8000/adddepartment/" method="get">
 <p align="center">
