--- a/cielyu/templates/doctor-1.html
+++ b/cielyu/templates/doctor-1.html
@@ -7,17 +7,13 @@
 </head>
 
 <body>
-<h2 align="center">增添医生预约记录</h2>
-<form action="http://192.168.137.1:8000/want/" method="post">
-<p align="center">name:<input type="text" name="doctor"></p>
+<form action="http://192.168.137.1:8000/hdoctor/" method="post">
 <p align="center">hospital:<input type="text" name="hospital"></p>
 <p align="center">department:<input type="text" name="department"></p>
-<p align="center">time:<input type="text" name="date"></p>
-<p align="center"><input type="submit" value="确认"><input type="reset" value="重置"></p>
+<p align="center"><input type="submit" value="提交"><input type="reset" value="重置"></p>
 </form>
 <form action="http://192.168.137.1:8000/index/" method="get">
 <p align="center"><input type="submit" value="返回首页"></p>
 </form>
 </body>
-
 </html>
