--- a/cielyu/templates/check-1.html
+++ b/cielyu/templates/check-1.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
-<form action="http://192.168.137.1:8000/doctorcheck/" method="get">
+<form action="http://192.168.137.1:8000/doctorcheck/" method="post">
 <p align="center">hospital:<input type="text" name="hospital"></p>
 <p align="center">department:<input type="text" name="department"></p>
 <p align="center"><input type="submit" value="提交"><input type="reset" value="重置"></p>
 </form>
 <form action="http://192.168.137.1:8000/index/" method="get">
 <p align="center"><input type="submit" value="返回首页"></p>
+</form>
 </body>
 </html>
