--- a/cielyu/templates/wantget.html
+++ b/cielyu/templates/wantget.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1 align="center">添加成功</h1>
-<form action="http://192.168.137.1:8000/indexx/" method="get">
+<form action="http://192.168.137.1:8000/want/" method="get">
 <p align="center"><input type="submit" value="增加下一条记录"></p>
 </form>
 <form action="http://192.168.137.1:8000/index/" method="get">
